--- a/packages/client-direct/package.json
+++ b/packages/client-direct/package.json
@@ -13,12 +13,14 @@
     "body-parser": "1.20.3",
     "cors": "2.8.5",
     "discord.js": "14.16.3",
+    "ethers": "6",
     "express": "4.21.1",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "zksync-ethers": "^6.15.3"
   },
   "devDependencies": {
-    "tsup": "8.3.5",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "tsup": "8.3.5"
   },
   "scripts": {
     "build": "tsup --format esm --dts",
